2009-12-14  Neil Horman <nhorman@tuxdriver.com>
	* src/main.c: Fixed adjustments to argc/argv in parse_option to account
	for the possibility that someone might specify multiple options in
	one argument (-ab vs. -a -b)

2009-12-09  Neil Horman <nhorman@tuxdriver.com>

	* src/main.c: Added a new parse_options implementation to make option
	parsing more sane and safe for systems which support getopt_long.  Also
	added a check to make sure that single character options didn't specify 
	trailing data (sf bug 2911623)

	* AUTHORS: Fixed my email address

2009-08-28  Neil Horman <nhorman@tuxdriver.com>

	* src/scanner.h: Added a LEXERR token to be returned if a lexer error
	occurs

	* src/crossref.c: Check for LEXERR token, and abort processing file if
	lexer error occurs

	* src/fcanner.l: check the statue of my_yytext on = and : symbols.  If
	its NULL consider that a lexer error.  This can occur if input files are
	provided that contain only a '=' or ':' symbol.  Without the ability to
	detect and return a lexer error, we get a segfault.

2009-05-06  Neil Horman <nhorman@tuxdriver.com>

	* src/main.c: Fixed string length checks to avoid overflow

2009-04-30  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/version.h (FILEVERSION, FIXVERSION): Version number changed
	to 15.7a.

	* configure.in: Version number changed to 15.7a.

	* configure (all): Regenerated.

2009-04-10  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/snprintf.c: Replacement implementation for missing snprintf
	and vsprintf, from www.jhweiss.de.
	
	* acinclude: New macros to optionally activate a replacement for
	missing snprintf and vsprintf, from www.jhweiss.de.

	* configure.in: Call new macros for snprintf and vsprintf.  Drop
	AC_FUNC_LSTAT in turn, since it would have required a replacement
	implementation for lstat().

	* src/Makefile.am (cscope_LDADD): Added LIBOBJS to automatically
	include snprintf.o in the build if and only if needed.
